Fixed color is not showing in the picker

--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
@@ -1076,9 +1076,14 @@
 	display: none;
 }
 
-.astra-color-picker-wrap .astra-popover-color .components-color-picker,
 .astra-color-picker-wrap .astra-popover-color .react-colorful {
     width: 100%;
+}
+.astra-popover-color .components-custom-gradient-picker{
+  z-index: 1;
+}
+.astra-popover-color .components-custom-gradient-picker__ui-line{
+  z-index: -1;
 }
 
 .astra-color-picker-wrap.picker-open{
